force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <description>Incident records covering injuries, property damage, environmental events, fire, and near-misses on EPC project sites.</description>
    <label>Incident</label>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>