force-app/main/default/objects/Incident__c/fields/CAPA_Notes__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Notes__c</fullName>
    <label>CAPA Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>