force-app/main/default/objects/Incident__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <label>Investigation Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>