force-app/main/default/objects/Incident__c/fields/Is_Near_Miss__c.field-meta.xml
<CustomField>
    <fullName>Is_Near_Miss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Near Miss</label>
    <type>Checkbox</type>
</CustomField>