force-app/main/default/objects/Incident__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
            <value>
                <fullName>Near-Miss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>